# arcade

./: .gitignore  README.md  package-lock.json  package.json
configs/: commands.json  gift-to-command.json  gifts.json
control/: server.js
core/game-engine/: bot.js  snake-engine.js  styles.css
games/: README.md  index.html
games/breakout/: bot.js  engine.js  index.html
games/dodge/: bot.js  engine.js  index.html
games/flappy/: bot.js  engine.js  index.html
games/pong/: bot.js  engine.js  index.html
games/shared/: audio.js  main.js  styles.css
games/snake/: ai-bot.js  ai-mcts-worker.js  ai.html  ai20.html  bot.js  engine.js  index.html
games/snake/ai/: alphasnake_paper_vastai_10x10.ipynb  alphasnake_train.ipynb  alphasnake_train_20x20.ipynb  alphasnake_train_vastai_10x10.ipynb  benchmark_colab.ipynb
games/snake/ai/cpp/: CMakeLists.txt  README.md
games/snake/ai/cpp/config/: config_paper_10x10.yaml  config_paper_20x20.yaml
games/snake/ai/cpp/scripts/: build.sh  deploy_local.sh  export_linear_to_onnx.py  export_resnet_to_onnx.py  provision_vast.sh  run_eval.sh  run_export.sh  run_train.sh  scp_onnx_from_vast.sh
games/snake/ai/cpp/src/: main_eval.cpp  main_export_onnx.cpp  main_train.cpp  tests_env.cpp
games/snake/ai/cpp/src/common/: cli.hpp  config.cpp  config.hpp
games/snake/ai/cpp/src/env/: snake_env.cpp  snake_env.hpp
games/snake/ai/cpp/src/mcts/: mcts.cpp  mcts.hpp
games/snake/ai/cpp/src/model/: policy_value_model.cpp  policy_value_model.hpp
games/snake/ai/cpp/src/train/: replay_buffer.hpp  trainer.cpp  trainer.hpp  types.hpp
games/snake/ai/cpp/vast/: provision_bootstrap.sh  template.env.example  template.md
games/tetris/: bot.js  engine.js  index.html
listener/: requirements.txt  tiktok_listener.py
overlay/: overlay.css  overlay.html  overlay.js
scripts/: serve-game.js  serve-simulator.js
simulator/: donate-simulator.html
